@@ -1,5 +1,6 @@
 0.8:
   fix pipelining bug
+  send all HTTP headers als HTTP_FOO=bar environment to CGIs
 
 0.7:
   use the new scan_urlencoded2 (libowfat cvs); properly serve
